fixed the overflow issue on the boidy by adding overflow hidden on the body and also buttoned up the positioning for the background bars in the 'give through your work section'. still need to think about adjusting the headers for the 4 different parts in section 5, not happy with how they're looking now. also only have one more main section left so I'm going to be workign on media queries and animations soon

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,18 @@ $purple: #d1c2dc;
 $pink: #fed4e7;
 $orange: #f2b79f;
 $green: #a9ca80;
+.bar{
+	overflow: hidden;
+	position: absolute;
+	z-index: 1;
+	width: 300%;
+	min-height: 355px;
+	align-self: center;
+	-webkit-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
+	box-shadow: 0px 0px 120px 0px rgba(50, 50, 50, 1);
+}
+
 
 html{
 	margin: 0px;
@@ -12,6 +24,7 @@ html{
 		margin: 0px;
 		padding:0px;
 		font-family: arial, helvetica;
+		overflow-x:hidden;
 		section.one{
 			position: relative;
 			display: flex;
@@ -232,7 +245,7 @@ html{
 		    align-items: flex-start;
 		    height: 600px;
 		    width: 100%;
-		    padding: 90px 0px;
+		    padding: 90px 0px 0px 0px;
 		    div.shp-support-container{
 				position: relative;
 			    display: block;
@@ -382,28 +395,42 @@ html{
 		}
 		section.four{
 			position: relative;
-		    display: flex;
-		    flex-direction: row;
-		    justify-content: center;
-		    align-items: center;
-		    height: 100%;
-		    width: 100%;
-		    margin-top: 90px;
-		    .background-bar{
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+			width: 100%;
+			padding-top: 90px;
+			z-index: 1;
+		    .bar-container{
 				position: absolute;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				z-index: 0;
-				width: 355px;
-				height: 370px;
-				flex-grow: 6;
-				transform: rotate(100deg);
-				background-color: #d1c2dc;
-				padding-bottom: 1400px;
-				bottom: -444px;
+				flex-direction: column;
 				align-self: center;
-				-webkit-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-				-moz-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-				box-shadow: 0px 0px 120px 0px rgba(50, 50, 50, 1);
-		    }
+				top: 0px;
+				overflow-y: hidden;
+				height: 100%;
+				width: 100%;
+				background-position: center;
+		    	.background-bar{
+					position: relative;
+					z-index: 4;
+					width: 355px;
+					min-height: 300%;
+					transform: rotate(100deg);
+					background-color: #d1c2dc;
+					background-position: center;
+					left: 60px;
+					align-self: center;
+					-webkit-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
+					-moz-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
+					box-shadow: 0px 0px 120px 0px #323232;
+			    }
+		    }	
 		    .facebook-fun-container{
 		    	position: relative;
 				display: flex;
@@ -494,53 +521,34 @@ html{
 			overflow: unset;
 		    .bg-imgs{
 			    position: absolute;
-			    display: block;
-			    z-index: 0;
-			    align-self: center;
-			    top: -460px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				z-index: 0;
+				flex-direction: column;
+				align-self: center;
+				top: 0px;
+				overflow-y: hidden;
+				height: 100%;
+				width: 100%;
+				background-position: center;
 		    	.pink{
-					position: absolute;
-					z-index: 0;
-					width: 355px;
-					height: 370px;
-					flex-grow: 6;
-					transform: rotate(80deg);
+		    		@extend .bar;
+					transform: rotate(26deg);
 					background-color: $pink;
-					padding-bottom: 1400px;
-					align-self: center;
-					-webkit-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-					-moz-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-					box-shadow: 0px 0px 120px 0px rgba(50, 50, 50, 1);
+					margin-bottom: -200px;
 		    	}
 		    	.orange{
-					position: absolute;
-					z-index: 1;
-					width: 355px;
-					height: 370px;
-					flex-grow: 6;
-					transform: rotate(80deg);
+		    		@extend .bar;
+					transform: rotate(-10deg);
+					margin-bottom: 220px;
+					bottom: 850px;
 					background-color: $orange;
-					padding-bottom: 1400px;
-					top: 280px;
-					align-self: center;
-					-webkit-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-					-moz-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-					box-shadow: 0px 0px 120px 0px rgba(50, 50, 50, 1);
 		    	}
 		    	.green{
-					position: absolute;
-					z-index: 0;
-					width: 355px;
-					height: 370px;
-					flex-grow: 6;
-					transform: rotate(280deg);
+		    		@extend .bar;
+					transform: rotate(334deg);
 					background-color: $green;
-					padding-bottom: 1400px;
-					top: 880px;
-					align-self: center;
-					-webkit-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-					-moz-box-shadow: 0px 0px 71px -10px rgba(0, 0, 0, 0.75);
-					box-shadow: 0px 0px 120px 0px rgba(50, 50, 50, 1);
 		    	}
 		    }
 		    .gtw-header{
